--- a/practice.html
+++ b/practice.html
@@ -372,12 +372,15 @@
     </div>
   </div>
 
-  <div class="chart-container">
-    <!-- 新しい折れ線グラフ -->
-    <div class="chart-box"><canvas id="activityLineChart"></canvas></div>
-    <!-- 今日の入店者数（数字） -->
-    <div class="chart-box"><div id="todayCount" class="number-box">0</div></div>
+<section class="chart-section">
+  <h2>過去30日間の入店人数推移</h2>
+  <div style="max-width: 1000px; margin: 0 auto;">
+    <canvas id="activityLineChart" style="width:100%; height:400px;"></canvas>
   </div>
+  <div style="text-align:center; margin-top:10px;">
+    今日の入店者数: <span id="todayCount" class="number-box">0</span>
+  </div>
+</section>
 
       <h2>全体状況</h2>
       <p>現在の入店者数: <span id="count">読み込み中...</span></p>
